2005-04-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_intr_create): Handle I_PROPAGATE mode
	bit for dynamic propagation of interrupts down the pipeline
	(i.e. IRQ chaining to Linux). Quite useful for people hooking an
	ISR on, say, the keyboard interrupt...

2005-04-09  Jim Cromie <jcromie@divsol.com>
	
	* testsuite/latency: Fix the overrun count.
	
2005-04-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10c2.

	* skins/rtai/mutex.c (rt_mutex_unlock): Make sure -EPERM is
	returned when applicable and fix the documentation.

2005-04-09 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skins/rtai/syscalls.c (__rt_mutex_unlock): Force primary mode
	switch so that a RT task currently running in secondary mode that
	owns a mutex does not get a spurious -EPERM error when trying to
	release it.

	* skins/rtai/mutex.c (__mutex_read_proc): Fix output, ensuring
	that a locked mutex always gets dumped as such even if the wait
	queue is empty.

2005-04-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Make sure RTAI_LINUXDIR is written to .rtai_config
	upon manual configuration.
	
2005-04-03  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.1

2005-04-03  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add Adeos support 2.6.9-r10c1.

	* rtai/skin/lib/task.c (rt_task_delete): Use pthread_cancel()
	internally to finalize RT tasks termination.

2005-04-03  Jim Cromie <jcromie@divsol.com>

	* testsuite/[k]latency: Revamp the whole printout formatting; add
	stddev and variance computations.

2005-04-02  Jim Cromie <jcromie@divsol.com>

	* testsuite: Various updates including extended histogram support.

2005-04-02  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Iron corner cases involving shadow termination
	during transient states (e.g. wait on start barrier, primary mode
	switch).
	(xnshadow_signal_completion): Keep the tasklist read locked across